--- a/src/main/resources/templates/addnewuser.html
+++ b/src/main/resources/templates/addnewuser.html
@@ -29,7 +29,7 @@
                     <input class="form-control" id="firstName" name="firstName" type="text">
                 </div>
                 <div class="form-group">
-                    <label for="middleName">Last name</label>
+                    <label for="lastName">Last name</label>
                     <input class="form-control" id="lastName" name="lastName" type="text">
                 </div>
                 <div class="form-group">
@@ -58,7 +58,7 @@
                 </div>
                 <div class="form-group">
                     <label for="docDate">Document's date</label>
-                    <input class="form-control" id="docDate" name="docDate" type="text">
+                    <input class="form-control" id="docDate" name="docDate" type="date">
                 </div>
                 <div class="form-group">
                     <label for="citizenshipCode">Citizenship's code</label>
